--- a/package.json
+++ b/package.json
@@ -1,23 +1,14 @@
 {
-  "name": "webapplicationgymlit",
-  "version": "1.0.0",
-  "description": "V tomto krátkém dokumentu si ukážeme, jak si \"připravit PC\" pro vývoj webové aplikace s `version control` skrze `GIT`",
-  "main": "index.js",
+  "name": "vite-project",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "live-server"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JindrichDvorak/WebApplicationGymlit.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/JindrichDvorak/WebApplicationGymlit/issues"
-  },
-  "homepage": "https://github.com/JindrichDvorak/WebApplicationGymlit#readme",
-  "dependencies": {
-    "live-server": "^1.2.2",
-    "three": "^0.180.0"
+  "devDependencies": {
+    "vite": "^7.2.2"
   }
 }
